--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background_opacity: 0.6;
+$background_opacity: 0.7;
 
 // create fading function
 @mixin easeout {
@@ -17,10 +17,10 @@ $background_opacity: 0.6;
       background-size: cover;
 
       // .overlay could be used too for the fading layer effect
-      // used after so the process do the next task after #bg-img
+      // used 'after' so the process do the next task after #bg-img
       &:after {
         content: "";
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         width: 100%;
