--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,8 +90,9 @@
     }
 
     .portrait {
-      width: 250px;
-      height: 250px;
+      position: fixed;
+      width: 300px;
+      height: 300px;
       background: url(../img/portrait.jpg);
       border-radius: 50%;
       border: solid 3px $secondary-color;
