--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,10 +90,10 @@
     }
 
     .portrait {
-      position: fixed;
-      width: 300px;
-      height: 300px;
+      width: 250px;
+      height: 250px;
       background: url(../img/portrait.jpg);
+      background-size: cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
