--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,7 @@
 
     .portrait {
       background: url("../img/portrait_small.jpg");
+      background-size: cover;
       width: 150px;
       height: 150px;
     }
