--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -16,7 +16,7 @@
     @include easeout;
   }
 
-  // Rotate into X (close icon) with menu line
+  // Rotate into X (close icon) with menu lines
   &.close {
     // Settings when the menu button is close
     // (Meaning when the Menu is click and switch to close state)
